# euler-events-hs

./: .envrc  .gitignore  CHANGELOG.md  Jenkinsfile  README.md  RELEASE_CHECKLIST.md  Setup.hs  build.nix  default.nix  euler-events-hs.cabal  euler.yaml  flake.nix  shell.nix  stack.yaml
nix/: euler-events-hs-overlay.nix  euler-gen-info  overlay.nix  sources.json
src/Euler/Events/: Class.hs  Constants.hs  Network.hs  Util.hs
src/Euler/Events/Logger/: Stdout.hs
src/Euler/Events/MetricApi/: Extra.hs  MetricApi.hs
src/Euler/Events/Types/: Event.hs  Metric.hs  Timer.hs
test/: EventSpec.hs  Main.hs  MetricApiSpec.hs
test/Doc/: Doctest.hs  Main.hs
